[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/objects/ExitDoor.gd" type="Script" id=1]
[ext_resource path="res://assets/door/back.png" type="Texture" id=2]
[ext_resource path="res://assets/door/front.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="ExitDoor" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Front" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 3 )

[node name="EnterPos" type="Position2D" parent="."]
position = Vector2( -32, 0 )

[node name="DonePos" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[connection signal="body_entered" from="." to="." method="_on_ExitDoor_body_entered"]
